finally fixed pagination jumping to right spot

--- a/app/assets/stylesheets/courses.displace.css.scss
+++ b/app/assets/stylesheets/courses.displace.css.scss
@@ -21,7 +21,7 @@
 /* This is for the cells inside of the table above */
 .major_cells
 {
-  width: 24%;  
+  width: 20%;  
   padding: 0px;
   border: 0px solid black;
 }
@@ -56,7 +56,7 @@
 .course_cells_code
 {
   font-family: 'Arial', 'Tahoma', sans-serif;
-  width: 30%;
+  width: 35%;
   padding: 0px;
   border: 0px solid black;
 }
